# forge-AI

./: .gitignore  CLAW.md  README.md
.claude/: launch.json
.github/workflows/: release.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.claude/: launch.json
frontend/src/: App.tsx  Markdown.tsx  api.ts  index.css  main.tsx  slashCommands.ts  theme.css  types.ts  useSessionEvents.ts
frontend/src/components/: AbsorbModal.tsx  AppShell.tsx  ChatInput.tsx  ChatMinimap.tsx  ChatWindow.tsx  EmptyHero.tsx  Icons.tsx  MessageView.tsx  PermissionTray.tsx  QuestionTray.tsx  RightPanel.tsx  SessionSidebar.tsx  SettingsModal.tsx  TabBar.tsx
frontend/src/components/panels/: FilesPanel.tsx  McpPanel.tsx  ModelsPanel.tsx  RagPanel.tsx  SkillsPanel.tsx  SummarizerForm.tsx
npm-wrapper/: README.md  package.json
release-assets/: README.txt
rust/: Cargo.toml  README.md
rust/.claw-agents/: agent-1779356441253113000.json  agent-1779356441253113000.md  agent-1779356441273188000.json  agent-1779356441273188000.md  agent-1779356482809855000.json  agent-1779356482809855000.md  agent-1779356482829569000.json  agent-1779356482829569000.md  agent-1779356668383751000.json  agent-1779356668383751000.md  agent-1779356668398514000.json  agent-1779356668398514000.md  agent-1779356906879855000.json  agent-1779356906879855000.md  agent-1779356906893302000.json  agent-1779356906893302000.md  agent-1779357638649155000.json  agent-1779357638649155000.md  agent-1779357638662038000.json  agent-1779357638662038000.md  agent-1779358196292222000.json  agent-1779358196292222000.md  agent-1779358196307132000.json  agent-1779358196307132000.md  agent-1779358305733187000.json  agent-1779358305733187000.md  agent-1779358305747356000.json  agent-1779358305747356000.md  agent-1779358308010132000.json  agent-1779358308010132000.md  agent-1779358308023004000.json  agent-1779358308023004000.md  agent-1779358310131297000.json  agent-1779358310131297000.md  agent-1779358310144478000.json  agent-1779358310144478000.md  agent-1779358832428493000.json  agent-1779358832428493000.md  agent-1779358832460160000.json  agent-1779358832460160000.md  (+228 more)
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: openai_compat_integration.rs  provider_client_integration.rs
rust/crates/claw-cli/src/: init.rs  main.rs
rust/crates/commands/src/: lib.rs
rust/crates/rag-poc/: Cargo.toml
rust/crates/rag-poc/src/: main.rs
rust/crates/runtime/src/: bash.rs  compact.rs  conversation.rs  lib.rs  mcp_stdio.rs  permissions.rs  prompt.rs  questions.rs  session.rs  usage.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: embedding.rs  lib.rs  persistence.rs  presets.rs  pricing.rs  rag.rs  registry.rs  registry_translate.rs  static_assets.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
rust/crates/vecdb/: Cargo.toml
rust/crates/vecdb/src/: lib.rs
rust/docs/releases/: 0.2.0.md  0.2.1.md
