[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
kuchiki = "0.8.1"
readable-readability = "0.4.0"
encoding_rs = "0.8.35"
html-escape = "0.2.13"
pdf-extract = "0.10.0"
feed-rs = "2.3.1"

[lints]
workspace = true
